// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReferencesButton rendering rendering as expected 1`] = `
<Tooltip
  arrowPointAtCenter={true}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.5}
  placement="left"
  prefixCls="ant-tooltip"
  transitionName="zoom-big-fast"
>
  <a
    className="multi-parent-button"
    onClick={[Function]}
    role="button"
  />
</Tooltip>
`;

exports[`ReferencesButton rendering rendering as with external reference 1`] = `
<Tooltip
  arrowPointAtCenter={true}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.5}
  placement="left"
  prefixCls="ant-tooltip"
  transitionName="zoom-big-fast"
>
  <a
    className="multi-parent-button"
    href="/trace/extTrace/uiFind?=extSpanID"
    rel="noopener noreferrer"
    target="_blank"
  />
</Tooltip>
`;
